# lrose-solo3

./: .gitignore  CMakeLists.txt  README.md  README.solo3.txt  README_HOMEBREW.txt  README_INSTALL_BIN.TXT  RELEASE_NOTES  aclocal.m4  apps_check_list  build_solo3  build_solo3_formula  build_solo3_homebrew  build_soloii_rpm  checkSolo3Install.py  check_apps  check_libs  config.h.in  configure  configure.ac  create_solo3_release.py  create_src_release.py  homebrew_install.mac_osx.md  installOriginLibFiles.py  install_bin_release  install_rpm.sh  libs_check_list  makefile.am  makefile.in  prepare_bin_release  prepare_src_release  runAutoConf.py  run_protoize  set_release_date.pl
editor/: ASpeckleCmd.cc  ASpeckleCmd.hh  AbsoluteValueCmd.cc  AbsoluteValueCmd.hh  AddFieldCmd.cc  AddFieldCmd.hh  AddValueCmd.cc  AddValueCmd.hh  AndBadFlagsCmd.cc  AndBadFlagsCmd.hh  AppendHistogramToFileCmd.cc  AppendHistogramToFileCmd.hh  AreaHistogramCmd.cc  AreaHistogramCmd.hh  AssertBadFlagsCmd.cc  AssertBadFlagsCmd.hh  AssignValueCmd.cc  AssignValueCmd.hh  BBGatesAveragedCmd.cc  BBGatesAveragedCmd.hh  BBMaxNegFoldsCmd.cc  BBMaxNegFoldsCmd.hh  BBMaxPosFoldsCmd.cc  BBMaxPosFoldsCmd.hh  BBUnfoldingCmd.cc  BBUnfoldingCmd.hh  BBUseAcWindCmd.cc  BBUseAcWindCmd.hh  BBUseFirstGoodGateCmd.cc  BBUseFirstGoodGateCmd.hh  BBUseLocalWindCmd.cc  BBUseLocalWindCmd.hh  CMakeLists.txt  ClearBadFlagsCmd.cc  ClearBadFlagsCmd.hh  ComplementBadFlagsCmd.cc  ComplementBadFlagsCmd.hh  CopyBadFlagsCmd.cc  CopyBadFlagsCmd.hh  CopyCmd.cc  (+211 more)
include/: CellSpacing.h  CellSpacingFP.h  CellVector.h  Comment.h  Correction.h  FieldLidar.h  FieldParam.h  FieldRadar.h  InSitu.h  InSituData.h  LidarDesc.h  LidarParam.h  LittleEndian.hh  NavDesc.h  Parameter.h  Pdata.h  Platform.h  Qdata.h  RadarDesc.h  Ray.h  Sweep.h  TimeSeries.h  Volume.h  Waveform.h  Xtra_stuff.h  date_stamp.h  dd_defines.h  dd_files.h  dd_general_info.h  dd_math.h  dd_time.h  dd_types.h  dgi_func_decl.h  dorade.h  dorade_data_descriptors.h  dorade_headers.h  dorade_share.h  dorade_shared_defs.h  eldora.h  input_sweepfiles.h  (+17 more)
include/piraq/: dd_defines.h  dd_types.h  piraq.h  piraqx.h
perusal/: CMakeLists.txt  CRectangle.cc  CRectangle.hh  Circle.cc  Circle.hh  ClickQueue.cc  ClickQueue.hh  ColorManager.cc  ColorManager.hh  ColorNamesWindow.cc  ColorNamesWindow.hh  ColorPalettesWindow.cc  ColorPalettesWindow.hh  ColorTable.cc  ColorTable.hh  ColorTableManager.cc  ColorTableManager.hh  ColorTablesWindow.cc  ColorTablesWindow.hh  DataWindow.cc  DataWindow.hh  EditCmdHelpWindow.cc  EditCmdHelpWindow.hh  EditCmdListHelpWindow.cc  EditCmdListHelpWindow.hh  EditFilesWindow.cc  EditFilesWindow.hh  EditWindow.cc  EditWindow.hh  ExamineDisplayWindow.cc  ExamineDisplayWindow.hh  ExamineWindow.cc  ExamineWindow.hh  Graphic.cc  Graphic.hh  ImageGenWindow.cc  ImageGenWindow.hh  ImportColorTableWindow.cc  ImportColorTableWindow.hh  Label.cc  (+72 more)
translate/: CMakeLists.txt  Cappi.h  ETL.h  LittleEndian.cc  README  README.xltrsii.html  ads_data.cc  ads_data.h  ads_data.hh  ads_main.cc  ads_main.hh  by_products.cc  by_products.hh  cfac_file.cc  cfac_file.hh  cimm_dd.cc  cimm_dd.hh  dap_common.cc  dap_common.hh  dd_catalog.cc  dd_catalog.hh  dd_crackers.cc  dd_crackers.hh  dd_der_flds.cc  dd_der_flds.hh  dd_examine.cc  dd_examine.hh  dd_files.cc  dd_files.hh  dd_files_test.cc  dd_files_test.hh  dd_io_mgmt.cc  dd_io_mgmt.hh  dd_io_structs.h  dd_ncdf.cc  dd_ncdf.hh  dd_stats.h  dd_swp_files.cc  dd_swp_files.hh  dd_swpfi.cc  (+134 more)
